[package]
name = "poor_gpio"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
tokio = { version = "0.2", features = ["process", "sync", "macros", "time", "fs"] }
log = "0.4.11"
