[package]
name = "reader_tester"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { varsion = "0.2.21", features = ["full"] }
poor_gpio = { path = "../" }
pretty_env_logger = "0.4"
